--- a/index.html
+++ b/index.html
@@ -27,5 +27,26 @@
         </nav>
       </div>
     </header>
+
+    <main>
+      <div class="filme-principal">
+        <div class="container">
+          <h3 class="titulo">Peaky Blinders</h3>
+          <p class="descricao">
+            Thomas Shelby e seus irmãos retornam a Birmingham depois de servir
+            no exército britânico durante a Primeira Guerra Mundial. Os Peaky
+            Blinders, a gangue na qual Thomas é líder, controlam a cidade de
+            Birmingham. Mas, como as ambições de Shelby se estendem para além de
+            Birmingham, ele planeja construir o império de negócios que criou e
+            impedir qualquer um que atrapalhar. Assista agora a nova temporada
+            de Peaky Blinders.
+          </p>
+          <div class="botoes">
+            <button role="button" class="botao">Assistir</button>
+            <button role="button" class="botao">Mais Informações</button>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
