adicionando font awesome

--- a/index.html
+++ b/index.html
@@ -48,5 +48,9 @@
         </div>
       </div>
     </main>
+    <script
+      src="https://kit.fontawesome.com/5d04d71e8e.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
