alteracao no container e readme

--- a/index.html
+++ b/index.html
@@ -42,8 +42,14 @@
             de Peaky Blinders.
           </p>
           <div class="botoes">
-            <button role="button" class="botao">Assistir</button>
-            <button role="button" class="botao">Mais Informações</button>
+            <button role="button" class="botao">
+              <i class="fas fa-play"></i>
+              Assistir
+            </button>
+            <button role="button" class="botao">
+              <i class="fas fa-info-circle"></i>
+              Mais Informações
+            </button>
           </div>
         </div>
       </div>
