--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
       rel="stylesheet"
     />
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- owl css-->
+    <link rel="stylesheet" href="style/owl/owl.carousel.min.css" />
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css" />
 
     <title>NETFLIX CLONE</title>
   </head>
@@ -54,9 +56,48 @@
         </div>
       </div>
     </main>
+
+    <div class="carrosel-filmes">
+      <div class="owl-carousel owl-theme">
+        <div class="item">
+          <img class="box-filme" src="img/mini1.jpg" alt="Poster do Filme" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini2.jpg" alt="Poster do Filme" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini3.jpg" alt="Poster do Filme" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini4.jpg" alt="Poster do Filme" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini5.jpg" alt="Poster do Filme" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini6.jpg" alt="Poster do Filme" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini7.jpg" alt="Poster do Filme" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini8.jpg" alt="Poster do Filme" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini9.jpg" alt="Poster do Filme" />
+        </div>
+        <div class="item">
+          <img class="box-filme" src="img/mini10.jpg" alt="Poster do Filme" />
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://kit.fontawesome.com/5d04d71e8e.js"
       crossorigin="anonymous"
     ></script>
+    <script src="js/owl/jquery.min.js"></script>
+    <script src="js/owl/owl.carousel.min.js"></script>
+    <script src="js/owl/setup.js"></script>
   </body>
 </html>
