--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       rel="stylesheet"
     />
 
+    <!-- responsividade -->
+    <link rel="stylesheet" href="style/responsive.css" />
+
     <!-- owl css-->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css" />
     <link rel="stylesheet" href="style/owl/owl.theme.default.min.css" />
